--- a/src/sass/vendor.sass
+++ b/src/sass/vendor.sass
@@ -4,11 +4,12 @@
 
 // Font-Awesome
 // @import 'node_modules/font-awesome/scss/font-awesome'
+@import 'node_modules/jointjs/dist/joint'
 
 // // // //
 
 // Bootstrap Bootstrap Variable Overrides
-@import './bootstrap_overrides'
+// @import './bootstrap_overrides'
 
 // Bootstrap Core functions, variables, and mixins
 @import 'node_modules/bootstrap/scss/functions';
