--- a/src/sass/bootstrap_overrides.sass
+++ b/src/sass/bootstrap_overrides.sass
@@ -21,10 +21,10 @@ $white: #f3f3f3 !default
 // $body-bg: #f3f3f3 !default
 $font-weight-normal: 300 !default
 
-// $body-bg: #333333
-// $body-color: $white
-$body-bg: #f3f3f3
-$body-color: #333333
+$body-bg: #333333
+$body-color: $white
+// $body-bg: #f3f3f3
+// $body-color: #333333
 
 // $hr-border-color:             #999 !default;
 // $hr-border-width:             $border-width !default;
