--- a/src/sass/vendor.sass
+++ b/src/sass/vendor.sass
@@ -9,7 +9,7 @@
 // // // //
 
 // Bootstrap Bootstrap Variable Overrides
-// @import './bootstrap_overrides'
+@import './bootstrap_overrides'
 
 // Bootstrap Core functions, variables, and mixins
 @import 'node_modules/bootstrap/scss/functions';
